--- a/lk14.html
+++ b/lk14.html
@@ -80,13 +80,13 @@
             <div class="acc_n_ico">
               <img src="images/avatar.svg" alt=""/>
             </div>
-            <!--              <div class="acc_nav">-->
-            <!--                <ul>-->
-            <!--                  <li><a href="#">Николай Петрович</a></li>-->
-            <!--                  <li><a href="#"><span>Статус</span>Директор</a></li>-->
-            <!--                  <li class="logout"><a href="#">Выйти</a></li>-->
-            <!--                </ul>-->
-            <!--              </div>-->
+            <div class="acc_nav">
+              <ul>
+                <li><a href="#">Название склада</a></li>
+                <li><a href="#"><span>Статус</span>Директор</a></li>
+                <li class="logout"><a href="#">Выйти</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -107,99 +107,171 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th>№ заявки П/П</th>
-                    <th>Дата</th>
-                    <th>№ дочернего склада</th>
-                    <th style="width: 15%">Наименование дочернего склада</th>
-                    <th>Сумма</th>
-                    <th>Баллы</th>
-                    <th>Тип склада</th>
-                    <th>Статус</th>
-                    <th>Изменить статус</th>
-                  </tr>
+                    <tr class="head_t">
+                      <th>
+                        <div>
+                          <span>№ заявки П/П</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Дата</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th style="width: 10%">
+                        <div>
+                          <span>№ дочернего склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Наименование дочернего склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Баллы</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Тип склада</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Изменить статус</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                    </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>22333</span>
-                        <a href="#" class="lt3">Просмотр / Редактирование</a>
-                      </div>
-                    </td>
-                    <td>02.10.2020 03:53:26</td>
-                    <td>331</td>
-                    <td>Ульяновск-Петракова (Кондырева )</td>
-                    <td>2333321</td>
-                    <td>24</td>
-                    <td>Выщестоящий партнер</td>
-                    <td>Заказ создан</td>
-                    <td>Отправляем</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>22333</span>
-                        <a href="#" class="lt3">Просмотр / Редактирование</a>
-                      </div>
-                    </td>
-                    <td>02.10.2020 03:53:26</td>
-                    <td>331</td>
-                    <td>Ульяновск-Петракова (Кондырева )</td>
-                    <td>2333321</td>
-                    <td>24</td>
-                    <td>Выщестоящий партнер</td>
-                    <td>Заказ создан</td>
-                    <td>Отправляем</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>22333</span>
-                        <a href="#" class="lt3">Просмотр / Редактирование</a>
-                      </div>
-                    </td>
-                    <td>02.10.2020 03:53:26</td>
-                    <td>331</td>
-                    <td>Ульяновск-Петракова (Кондырева )</td>
-                    <td>2333321</td>
-                    <td>24</td>
-                    <td>Выщестоящий партнер</td>
-                    <td>Заказ создан</td>
-                    <td>Отправляем</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>22333</span>
-                        <a href="#" class="lt3">Просмотр / Редактирование</a>
-                      </div>
-                    </td>
-                    <td>02.10.2020 03:53:26</td>
-                    <td>331</td>
-                    <td>Ульяновск-Петракова (Кондырева )</td>
-                    <td>2333321</td>
-                    <td>24</td>
-                    <td>Выщестоящий партнер</td>
-                    <td>Заказ создан</td>
-                    <td>Отправляем</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <div class="lin_t_top">
-                        <span>22333</span>
-                        <a href="#" class="lt3">Просмотр / Редактирование</a>
-                      </div>
-                    </td>
-                    <td>02.10.2020 03:53:26</td>
-                    <td>331</td>
-                    <td>Ульяновск-Петракова (Кондырева )</td>
-                    <td>2333321</td>
-                    <td>24</td>
-                    <td>Выщестоящий партнер</td>
-                    <td>Заказ создан</td>
-                    <td>Отправляем</td>
-                  </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>22333</span>
+                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                      <td>Отправляем</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>22333</span>
+                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                      <td>Отправляем</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>22333</span>
+                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                      <td>Отправляем</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>22333</span>
+                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                      <td>Отправляем</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <div class="lin_t_top">
+                          <span>22333</span>
+                          <a href="#" class="lt3">Просмотр / Редактирование</a>
+                        </div>
+                      </td>
+                      <td>02.10.2020 03:53:26</td>
+                      <td>331</td>
+                      <td>Ульяновск-Петракова (Кондырева )</td>
+                      <td>2333321</td>
+                      <td>24</td>
+                      <td>Выщестоящий партнер</td>
+                      <td>Заказ создан</td>
+                      <td>Отправляем</td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
