--- a/lk8.html
+++ b/lk8.html
@@ -80,13 +80,13 @@
             <div class="acc_n_ico">
               <img src="images/avatar.svg" alt=""/>
             </div>
-            <!--              <div class="acc_nav">-->
-            <!--                <ul>-->
-            <!--                  <li><a href="#">Николай Петрович</a></li>-->
-            <!--                  <li><a href="#"><span>Статус</span>Директор</a></li>-->
-            <!--                  <li class="logout"><a href="#">Выйти</a></li>-->
-            <!--                </ul>-->
-            <!--              </div>-->
+            <div class="acc_nav">
+              <ul>
+                <li><a href="#">Название склада</a></li>
+                <li><a href="#"><span>Статус</span>Директор</a></li>
+                <li class="logout"><a href="#">Выйти</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
                         <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                       </div>
                     </th>
-                    <th>
+                    <th style="padding-right: 25px">
                       <div>
                         <span>Артикул</span>
                       </div>
@@ -157,7 +157,7 @@
                         <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                       </div>
                     </th>
-                    <th>
+                    <th style="padding-right: 25px">
                       <div>
                         <span>Складская цена</span>
                       </div>
@@ -166,7 +166,7 @@
                         <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                       </div>
                     </th>
-                    <th>
+                    <th style="padding-right: 25px">
                       <div>
                         <span>Дистрибьюторская цена</span>
                       </div>
@@ -175,7 +175,7 @@
                         <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                       </div>
                     </th>
-                    <th>
+                    <th style="padding-right: 25px">
                       <div>
                         <span>Баллы</span>
                       </div>
@@ -184,7 +184,7 @@
                         <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                       </div>
                     </th>
-                    <th>
+                    <th style="padding-right: 25px">
                       <div>
                         <span>Количество на складе</span>
                       </div>
