--- a/lk1.html
+++ b/lk1.html
@@ -69,6 +69,11 @@
                   </span>
                   <span class="ico_t">Расход</span>
                 </a>
+                <ul class="sub_menu">
+                  <li><a href="#">Отгрузка</a></li>
+                  <li><a href="#">Списание</a></li>
+                  <li><a href="#">Продажа</a></li>
+                </ul>
               </li>
             </ul>
           </div>
@@ -80,13 +85,13 @@
               <div class="acc_n_ico">
                 <img src="images/avatar.svg" alt=""/>
               </div>
-<!--              <div class="acc_nav">-->
-<!--                <ul>-->
-<!--                  <li><a href="#">Николай Петрович</a></li>-->
-<!--                  <li><a href="#"><span>Статус</span>Директор</a></li>-->
-<!--                  <li class="logout"><a href="#">Выйти</a></li>-->
-<!--                </ul>-->
-<!--              </div>-->
+              <div class="acc_nav">
+                <ul>
+                  <li><a href="#">Название склада</a></li>
+                  <li><a href="#"><span>Статус</span>Директор</a></li>
+                  <li class="logout"><a href="#">Выйти</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
