--- a/lk13.html
+++ b/lk13.html
@@ -80,13 +80,13 @@
             <div class="acc_n_ico">
               <img src="images/avatar.svg" alt=""/>
             </div>
-            <!--              <div class="acc_nav">-->
-            <!--                <ul>-->
-            <!--                  <li><a href="#">Николай Петрович</a></li>-->
-            <!--                  <li><a href="#"><span>Статус</span>Директор</a></li>-->
-            <!--                  <li class="logout"><a href="#">Выйти</a></li>-->
-            <!--                </ul>-->
-            <!--              </div>-->
+            <div class="acc_nav">
+              <ul>
+                <li><a href="#">Название склада</a></li>
+                <li><a href="#"><span>Статус</span>Директор</a></li>
+                <li class="logout"><a href="#">Выйти</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -143,13 +143,13 @@
               <div class="middle_part">
                 <table class="otch_p bordered">
                   <thead>
-                  <tr class="head_t">
-                    <th style="width: 35%">Наименование</th>
-                    <th>Категория</th>
-                    <th>Запрос</th>
-                    <th>Поставка</th>
-                    <th>Приход</th>
-                  </tr>
+                    <tr class="head_t">
+                      <th style="width: 35%">Наименование</th>
+                      <th>Категория</th>
+                      <th>Запрос</th>
+                      <th>Поставка</th>
+                      <th>Приход</th>
+                    </tr>
                   </thead>
                   <tbody>
                     <tr>
@@ -196,10 +196,79 @@
                 <input type="text" class="tinput" required />
                 <label class="tlabel" style="top: auto">Оставить комментарий</label>
               </div>
-              <div class="l_p" style="padding-bottom: 20px;">
+              <div class="l_p" style="padding-bottom: 100px;">
                 <div class="nav_links">
                   <a class="brd_green fill w50" href="#">Сохранить заявку</a>
                   <a class="brd_green w50 last" href="#">Оприходовать</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer" style="display: none">
+        <div class="footer_line">
+          <div class="title_line">
+            <div class="title_line_t burger">Каталог</div>
+          </div>
+          <div class="modal_line">
+            <a href="#" class="closebig"></a>
+            <h3>Каталог</h3>
+            <div class="component_body">
+              <div class="line_param_input">
+                <div class="label_in">
+                  <input type="text" class="tinput" required />
+                  <label class="tlabel">Поиск по наименованию и артиклу</label>
+                </div>
+              </div>
+              <div class="f_part" style="padding-bottom: 0;">
+                <div class="middle_part">
+                  <table class="otch_p bordered">
+                    <thead>
+                    <tr class="head_t">
+                      <th style="width: 35%">Наименование</th>
+                      <th>Артикул</th>
+                      <th>Баллы</th>
+                      <th>Цена</th>
+                      <th>Остаток по складу</th>
+                      <th>Количество</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                      <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                      <td>115</td>
+                      <td>24</td>
+                      <td>457</td>
+                      <td>128</td>
+                      <td>1</td>
+                    </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
