--- a/lk16.html
+++ b/lk16.html
@@ -80,13 +80,13 @@
             <div class="acc_n_ico">
               <img src="images/avatar.svg" alt=""/>
             </div>
-            <!--              <div class="acc_nav">-->
-            <!--                <ul>-->
-            <!--                  <li><a href="#">Николай Петрович</a></li>-->
-            <!--                  <li><a href="#"><span>Статус</span>Директор</a></li>-->
-            <!--                  <li class="logout"><a href="#">Выйти</a></li>-->
-            <!--                </ul>-->
-            <!--              </div>-->
+            <div class="acc_nav">
+              <ul>
+                <li><a href="#">Название склада</a></li>
+                <li><a href="#"><span>Статус</span>Директор</a></li>
+                <li class="logout"><a href="#">Выйти</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -143,7 +143,7 @@
                 <div class="line_param_top">
                   На счету у партнера:
                 </div>
-                <div class="line_param_bottom">
+                <div class="line_param_bottom" style="color: #ED1A2E;">
                   -2340
                 </div>
               </div>
@@ -310,6 +310,7 @@
                 <div class="label_in">
                   <input type="text" class="tinput" required />
                   <label class="tlabel">Поиск по наименованию и артиклу</label>
+                  <span class="search"></span>
                 </div>
               </div>
               <div class="f_part" style="padding-bottom: 0;">
